@@ -1,17 +1,23 @@
 package modelado;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+
+@Entity
 public class EstrategiaAleatoria implements Estrategia {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
 	
-
 	@Override
 	public Bloque siguienteBloque(List<Bloque> bloques, int actual, List<Bloque> bloquesCompletos) {
 		// Lista de bloques disponibles que cumplen las condiciones
 		List<Bloque> bloquesDisponibles = bloques.stream()
-				.filter(bloque -> !bloquesCompletos.contains(bloque) && !bloque.equals(bloques.get(actual)))
-				.collect(Collectors.toList());
+				.filter(bloque -> !bloquesCompletos.contains(bloque) && !bloque.equals(bloques.get(actual))).toList();
 
 		// Si no hay bloques disponibles, devuelve null
 		if (bloquesDisponibles.isEmpty()) {
@@ -28,7 +34,7 @@ public class EstrategiaAleatoria implements Estrategia {
 		// Filtrar las preguntas disponibles en el bloque actual
 		List<Pregunta> preguntasDisponibles = Bactual.getPreguntas().stream()
 				.filter(pregunta -> !PreguntasCompletas.contains(pregunta) && pregunta.getNumPregunta() != Pactual)
-				.collect(Collectors.toList());
+				.toList();
 
 		// Si no hay preguntas disponibles, devolver null
 		if (preguntasDisponibles.isEmpty()) {
